# agni-modern

./: .gitignore  README.md  pyproject.toml
configs/data/: base.yaml  pilot_kalimantan.yaml  pilot_kalimantan_expanded.yaml  pilot_kalimantan_severity.yaml  pilot_occurrence_jambi_small.yaml
configs/experiments/: baseline_occurrence_30d.yaml  baseline_occurrence_7d.yaml  multitask_transformer.yaml  pilot_kalimantan.yaml  pilot_kalimantan_expanded.yaml  pilot_kalimantan_severity.yaml  pilot_kalimantan_transformer.yaml  pilot_occurrence_30d.yaml  synthetic_baseline.yaml  synthetic_severity.yaml
configs/features/: base.yaml
configs/models/: logreg.yaml  rf.yaml  transformer.yaml  transformer_pilot.yaml  xgb_occurrence.yaml  xgb_severity_cls.yaml  xgb_severity_reg.yaml
scripts/: build_dataset.py  build_grid.py  build_synthetic_dataset.py  evaluate.py  explain.py  plot_model_curves.py  run_ablation.py  run_inference.py  select_spatial_holdout.py  train_baselines.py  train_transformer.py
src/agni_modern/: __init__.py
src/agni_modern/data/: __init__.py  contracts.py  ee_client.py  export_pipeline.py  grid.py  parquet_io.py  sources.py  synthetic.py  temporal_sampling.py  (+1 more)
tests/: conftest.py  test_calibration.py  test_config.py  test_contracts.py  test_evaluation_suite.py  test_feature_engineering.py  test_inference_and_explain.py  test_metrics.py  test_model_curves.py  test_pipeline_smoke.py  test_real_pilot_plumbing.py  test_research_grade_fixes.py  test_spatial_holdout_selection.py  test_synthetic_data.py  test_transformer_shapes.py  test_transformer_train_smoke.py
(+49 files in other folders)
