[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agni-modern"
version = "0.1.0"
description = "Research-grade wildfire occurrence and pre-ignition severity forecasting for Indonesia"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agni Modern Contributors" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "numpy>=1.26,<2.2",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "polars>=0.20",
  "geopandas>=0.14",
  "shapely>=2.0",
  "rasterio>=1.3",
  "xarray>=2024.1",
  "scikit-learn>=1.4,<1.7",
  "xgboost>=2.0,<3.0",
  "torch>=2.2,<2.7",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "typer>=0.12",
  "earthengine-api>=1.0",
  "google-auth>=2.29",
  "google-cloud-storage>=2.16",
  "shap>=0.45,<0.48",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
